# visPlanner

docs/: minco_replacement_guide.md
src/planner/minco_opt/: CMakeLists.txt  package.xml
src/planner/minco_opt/include/minco_opt/: minco_optimizer.h
src/planner/minco_opt/src/: minco_optimizer.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml  type_converter.hpp
src/planner/plan_manage/include/plan_manage/: planner_manager.h
src/planner/plan_manage/launch/: advanced_param_tracker.xml  compare_minco_bspline.launch  monitor_collision_safety.launch
src/planner/plan_manage/scripts/: collision_safety_monitor.py  send_goal_sequence.py
src/planner/plan_manage/src/: planner_manager.cpp  traj_compare_node.cpp
src/planner/traj_utils/include/traj_utils/: plan_container.hpp
src/uav_simulator/Utils/multi_map_server/: CMakeLists.txt
src/uav_simulator/local_sensing/: CMakeLists.txt
